--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -1,4 +1,4 @@
-.barnav {
+/*.barnav {
     display: flex;
     width: 100%;
     align-items: center;
@@ -7,6 +7,48 @@
     background-color: black;
     color: white;
     margin-right: 20%;
+  }*/
+
+header {
+  padding: 0.5rem 0.8rem 0;
+  background-color: black;
   }
+
+
+nav {
+  display: flex;
+  justify-content: space-around;
+}
   
- 
+ ul {
+   margin: 0.5rem 0;
+   list-style: none;
+   display: flex;
+   justify-content: space-between;
+   text-decoration: none;
+   font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif
+ }
+
+ ul li {
+   padding: 1.5rem;
+ }
+
+ .logo img {
+   width: 200px;
+ }
+
+ .carritologo img {
+   width: 30px;
+ }
+
+ input {
+   width: 30%;
+   height: 10%;
+   font-size: 0.6rem;
+   font-weight: lighter;
+   color: gray;
+   border: none;
+   border-radius: 20px;
+   padding: 0.5rem 1rem;
+ }
+
