--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -21,12 +21,13 @@ nav {
 }
   
  ul {
-   margin: 0.5rem 0;
+   margin: 0.5rem 0.5rem;
    list-style: none;
    display: flex;
-   justify-content: space-between;
+   justify-content: space-evenly;
    text-decoration: none;
-   font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif
+   font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+   color: white;
  }
 
  ul li {
@@ -50,5 +51,11 @@ nav {
    border: none;
    border-radius: 20px;
    padding: 0.5rem 1rem;
+   font-size: 10px;
  }
 
+ a {
+   text-decoration: none;
+   color: white;
+   font-size: 15px;
+ }
